--- a/brad04.html
+++ b/brad04.html
@@ -11,9 +11,11 @@
         var y = document.getElementById('y').value;
 
         console.log(x + ":" + y);
-        var url =  "brad03.php?x=" + x + "&y=" + y;
+        var url =  "brad04.php";
         console.log(url);
-        xmlhttp.open("GET",url, true);
+        xmlhttp.open("POST",url, true);
+        xmlhttp.setRequestHeader("Content-type",
+            "application/x-www-form-urlencoded");
         xmlhttp.onreadystatechange = function() {
             if (xmlhttp.readyState == 4 &&
                 xmlhttp.status == 200) {
@@ -23,7 +25,7 @@
                 console.log("status: " + xmlhttp.status);
             }
         };
-        xmlhttp.send();
+        xmlhttp.send("x=" + x + "&y=" + y);
     }
 
 </script>
