--- a/brad05.html
+++ b/brad05.html
@@ -65,6 +65,8 @@
         xmlhttp.onreadystatechange = function () {
             if (xmlhttp.readyState == 4 &&
                 xmlhttp.status == 200) {
+                var table = document.getElementById('table');
+
                 var xml = xmlhttp.responseXML;
                 var notes = xml.getElementsByTagName('note');
                 for (var i=0; i<notes.length; i++){
@@ -80,11 +82,24 @@
                     for (var j=0; j<names.length; j++){
                         var nameObj = names[j];
                         console.log(nameObj.innerHTML);
+
+                        var tr = table.insertRow(-1);
+                        if (j==0){
+                            var td0 = tr.insertCell(0);
+                            td0.rowSpan = names.length;
+                            td0.innerHTML = title;
+
+                            var td1 = tr.insertCell(1);
+                            td1.innerHTML = nameObj.innerHTML;
+
+                            var td2 = tr.insertCell(2);
+                            td2.rowSpan = names.length;
+                            td2.innerHTML = price;
+                        }else{
+                            var td1 = tr.insertCell(0);
+                            td1.innerHTML = nameObj.innerHTML;
+                        }
                     }
-
-
-
-
                 }
             }
         };
